# rmit-rendering

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  USAGE
include/: Handle.hpp  (+2 more)
portal/: .cproject  .gitignore  .project  BUILD  CMakeLists.txt  DEPENDENCIES  Doxyfile  perf.data
portal/assets/models/: capsule.mtl
portal/assets/shaders/: ambientLight.frag  default.frag  default.vert  defaultLight.vert  deferredPassOne.frag  deferredPassOne.vert  deferredPassTwo.frag  directionalLight.frag  fullScreenQuad.vert  geometryBufferOutput.frag  geometryPass.frag  geometryPass.vert  helloWorld.frag  helloWorld.vert  pointLight.frag  quad.geom  ssao.frag
portal/cmake/: .gitignore  CMakeCache.txt
portal/cmake/Modules/: FindAssImp.cmake~  FindAssimp.cmake
portal/doc/html/: AssetManager_8cpp.html  AssetManager_8hpp.html  AssetManager_8hpp_source.html  Asset_8cpp.html  Asset_8hpp.html  Asset_8hpp_source.html  BufferObject_8hpp.html  BufferObject_8hpp_source.html  BufferedMaterial_8cpp.html  BufferedMaterial_8hpp.html  BufferedMaterial_8hpp_source.html  BufferedModel_8cpp.html  BufferedModel_8hpp.html  BufferedModel_8hpp_source.html  BufferedShader_8cpp.html  BufferedShader_8hpp.html  BufferedShader_8hpp_source.html  BufferedTexture_8cpp.html  BufferedTexture_8hpp.html  BufferedTexture_8hpp_source.html  CameraController_8cpp.html  CameraController_8hpp.html  CameraController_8hpp_source.html  Camera_8cpp.html  Camera_8hpp.html  Camera_8hpp_source.html  Client_8cpp.html  Client_8hpp.html  Client_8hpp_source.html  DebugRenderer_8cpp.html  DebugRenderer_8hpp.html  DebugRenderer_8hpp_source.html  FileWatcher_8cpp.html  FileWatcher_8hpp.html  FileWatcher_8hpp_source.html  Font_8cpp.html  Font_8hpp.html  Font_8hpp_source.html  FreeList_8hpp.html  FreeList_8hpp_source.html  (+220 more)
portal/doc/latex/: AssetManager_8cpp.tex  AssetManager_8hpp.tex  Asset_8cpp.tex  Asset_8hpp.tex  BufferObject_8hpp.tex  BufferedMaterial_8cpp.tex  BufferedMaterial_8hpp.tex  BufferedModel_8cpp.tex  BufferedModel_8hpp.tex  BufferedShader_8cpp.tex  BufferedShader_8hpp.tex  BufferedTexture_8cpp.tex  BufferedTexture_8hpp.tex  CameraController_8cpp.tex  CameraController_8hpp.tex  Camera_8cpp.tex  Camera_8hpp.tex  Client_8cpp.tex  Client_8hpp.tex  DebugRenderer_8cpp.tex  DebugRenderer_8hpp.tex  FileWatcher_8cpp.tex  FileWatcher_8hpp.tex  Font_8cpp.tex  Font_8hpp.tex  FreeList_8hpp.tex  Interface_8cpp.tex  Interface_8hpp.tex  Intersections_8hpp.tex  KeyboardHandler_8cpp.tex  KeyboardHandler_8hpp.tex  Material_8cpp.tex  Material_8hpp.tex  Model_8cpp.tex  Model_8hpp.tex  MouseHandler_8cpp.tex  MouseHandler_8hpp.tex  Octree_8cpp.tex  Octree_8hpp.tex  Player_8hpp.tex  (+112 more)
portal/include/: Camera.hpp  Client.hpp  CommandSet.hpp  Config.cmake.hpp  DefaultCommandSet.hpp  FreeList.hpp  Interface.hpp  Keyboard.hpp  Portal.hpp  Renderer.hpp  Scene.cpp  Scene.hpp  Utilities.hpp  config.hpp
portal/include/assets/: Asset.hpp  AssetManager.hpp  DiskFile.hpp  FileWatcher.hpp  Font.hpp  Material.hpp  Model.hpp  Model.hpp.orig  Shader.hpp  Texture.hpp  asset.hpp  asset_store.hpp  file.hpp  file_watcher.hpp  font.hpp  image.hpp  material.hpp  scene.hpp
portal/include/client/: CameraController.hpp  Client.hpp  Interface.hpp  camera_controller.hpp  client.hpp
portal/include/input/: CommandSet.hpp  DefaultCommandSet.hpp  KeyboardHandler.hpp  MouseHandler.hpp
portal/include/physics/: Intersections.hpp  Octree.hpp  Types.hpp
portal/include/renderer/: BufferObject.hpp  BufferedMaterial.hpp  BufferedModel.hpp  BufferedShader.hpp  BufferedTexture.hpp  DebugRenderer.hpp  GLBufferObject.hpp  GLBufferedMaterial.hpp  GLBufferedModel.hpp  GLBufferedShader.hpp  GLBufferedTexture.hpp  GLRenderer.hpp  GLResourceManager.hpp  Material.cpp  Material.hpp  RenderInfoBase.hpp  Renderer.hpp  ResourceManager.hpp  debug_renderer.hpp  interface_renderer.hpp  renderer.hpp
portal/include/scene/: Camera.hpp  Scene.hpp  SceneNode.hpp  camera.hpp  scene.hpp  scene_graph.hpp  scene_node.hpp
portal/include/shared/: data_store.hpp  handle.hpp  utilities.hpp
portal/include/threading/: Task.hpp  ThreadPool.hpp  WorkerThread.hpp  task.hpp  thread_pool.hpp  worker_thread.hpp
portal/libs/assimp--3.0.1270/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  shuttle.assxml
portal/profiling/: CMakeLists.txt
portal/profiling/octree/: Octree.cpp
portal/report/: #report.lyx#  report.lyx  report.lyx~  report.tex
portal/scripts/data_packer/: pack_directory.py  unpack_directory.py
portal/scripts/path_hasher/: file_hashes.hppt  hash_paths.py
portal/src/: Camera.cpp  CameraController.cpp  Client.cpp  Interface.cpp  Keyboard.cpp  Portal.cpp  Renderer.cpp  Scene.cpp  portal.cpp  portal_demo.cpp
portal/src/assets/: Asset.cpp  AssetManager.cpp  DiskFile.cpp  FileWatcher.cpp  Material.cpp  Model.cpp  Shader.cpp  Texture.cpp  asset.cpp  asset_store.cpp  data_store.cpp  data_store_t.cpp  file.cpp  font.cpp  image.cpp  material.cpp  scene.cpp
portal/src/client/: CameraController.cpp  Client.cpp  Interface.cpp  camera_controller.cpp  client.cpp
portal/src/file_system/: file_manager.cpp
portal/src/input/: KeyboardHandler.cpp  MouseHandler.cpp  keyboard_handler.cpp  mouse_handler.cpp
portal/src/physics/: DFSLayoutPolicy.cpp  Octree.cpp  TriangleAABBIntersection.c
portal/src/renderer/: BufferedMaterial.cpp  BufferedModel.cpp  BufferedShader.cpp  BufferedTexture.cpp  DebugRenderer.cpp  FrameBuffer.cpp  GLBufferedMaterial.cpp  GLBufferedModel.cpp  GLBufferedShader.cpp  GLBufferedTexture.cpp  GLRenderer.cpp  GLResourceManager.cpp  Material.hpp  Renderer.cpp  ResourceManager.cpp  debug_renderer.cpp  interface_renderer.cpp  renderer.cpp  renderer_backend.cpp
portal/src/scene/: Camera.cpp  Scene.cpp  SceneNode.cpp  camera.cpp  scene.cpp  scene_node.cpp
portal/src/shared/: file_watcher.cpp
portal/src/threading/: Task.cpp  ThreadPool.cpp  task.cpp  thread_pool.cpp  worker_thread.cpp
test/: CMakeLists.txt
test/data_structures/: indata_free_list_test.cpp
test/file_system/: CMakeLists.txt  file_manager_test.cpp  file_path_checksum_test.cpp
(+258 files in other folders)
