set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/profiling)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/profiling)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/profiling)

set(BUILD_PROFILING_OCTREE OFF CACHE BOOL "Build profiling binary for octree")

if (${BUILD_PROFILING_OCTREE})
	add_subdirectory(octree)
endif ()